# Scripte

./: README.md  Spotify_Playlist_YT_Downloader.sh  ffmpeg_installer.sh
slideshow/: CMakeLists.txt  README.md  slideshow.cpp  slideshow.hpp
